@@ -13,7 +13,10 @@
 # http://www.scylla-charybdis.com/download/
 #
 # $Log$
-# Revision 1.3  2004-05-20 04:59:00  tino
+# Revision 1.4  2004-05-23 10:12:23  tino
+# new upload for NWNadm
+#
+# Revision 1.3  2004/05/20 04:59:00  tino
 # master can be 0, which closes stdin.  close in the slave part removed.
 #
 # Revision 1.2  2004/05/20 02:03:59  tino
@@ -33,7 +36,7 @@ do
 	echo "*******************************************************************************"
 	echo "-------------------------------------------------------------------------------"
 	tty
-	stty
+	stty -a
 	echo "==============================================================================="
 	sleep 1
 done
